session tts audio player z-index fix

--- a/packages/fakeyou.com/src/scss/site-refresh.scss
+++ b/packages/fakeyou.com/src/scss/site-refresh.scss
@@ -947,6 +947,11 @@ textarea {
   max-width: 480px;
 }
 
+.zi-1 {
+  position: relative;
+  z-index: 1 !important;
+}
+
 .zi-2 {
   position: relative;
   z-index: 2 !important;
